[tool.poetry]
name = "nexus"
version = "0.1.0"
description = ""
authors = ["Nicholas Devenish <ndevenish@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.8.2"
xsdata = "^24.7"
xsdata-pydantic = "^24.5"
rich = "^13.7.1"
pint = "^0.24.3"
annotated-types = "^0.7.0"

[tool.poetry.scripts]
parse = "nexus.parse:run"

[tool.poetry.group.dev.dependencies]
xsdata = { extras = ["cli"], version = "^24.7" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
ignore = ["src/nexus/nxdl.py"]
